# vvdec

./: .android_sdk_ndk.dockerfile  .emscripten.dockerfile  .gitignore  .gitlab-ci-internal.yml  .gitlab-ci.yml  .selenium.dockerfile  AUTHORS.md  CMakeLists.txt  LICENSE.txt  Makefile  README.md  define_bitstream_files.cmake
.github/workflows/: Build.yml
cmake/install/: VVDecConfig.cmake  VVDecConfigVersion.cmake.in  vvdecConfig.cmake  vvdecConfigVersion.cmake.in
cmake/modules/: VVDecInstall.cmake  check_missing_intrinsics.cmake  define_bitstream_files.cmake  vvdecCompilerSupport.cmake  vvdecInstall.cmake
cmake/test/: run_test.cmake
cmake/toolchains/: aarch64-linux-gnu-gcc-ubuntu.cmake  aarch64-linux-gnu-gcc-ubuntu2004.cmake  arm-linux-gnueabihf-gcc-ubuntu.cmake  i686-w64-mingw32-gcc-posix-ubuntu.cmake  x86_64-w64-mingw32-gcc-posix-ubuntu.cmake  x86_64-w64-mingw32-gcc-posix-ubuntu1604.cmake  x86_64-w64-mingw32-gcc-posix-ubuntu1804.cmake  x86_64-w64-mingw32-gcc-posix-ubuntu2004.cmake  x86_64-w64-mingw32-gcc-posix-ubuntu2204.cmake
include/vvdec/: sei.h  seimsg.h  version.h  vvdec.h  vvdec.h.in  vvdecDecl.h
pkgconfig/: libvvdec.pc.in
source/App/libvvcdec/: CMakeLists.txt  libvvcdec.cpp  libvvcdec.h  vvcDecoderWrapper.cpp  vvcDecoderWrapper.h
source/App/vvdecapp/: CMakeLists.txt  CmdLineParser.h  MD5StreamBuf.cpp  MD5StreamBuf.h  resource.h  resource_version.h  vvdecHelper.h  vvdecapp.cpp  vvdecapp.rc
source/Lib/CommonLib/: AdaptiveLoopFilter.cpp  AdaptiveLoopFilter.h  BitStream.cpp  BitStream.h  Buffer.cpp  Buffer.h  ChromaFormat.cpp  ChromaFormat.h  CodingStructure.cpp  CodingStructure.h  Common.h  CommonDef.h  ContextModelling.cpp  ContextModelling.h  Contexts.cpp  Contexts.h  InterPrediction.cpp  InterPrediction.h  InterpolationFilter.cpp  InterpolationFilter.h  IntraPrediction.cpp  IntraPrediction.h  LoopFilter.cpp  LoopFilter.h  MatrixIntraPrediction.cpp  MatrixIntraPrediction.h  MipData.h  MotionInfo.h  Mv.cpp  Mv.h  NAL.h  ParameterSetManager.cpp  ParameterSetManager.h  PicListManager.cpp  PicListManager.h  PicYuvMD5.cpp  Picture.cpp  Picture.h  Quant.cpp  Quant.h  (+38 more)
source/Lib/CommonLib/arm/: BufferARM.h  CommonDefARM.cpp  CommonDefARM.h  InitARM.cpp  InterpolationFilterARM.h  InterpolationFilter_neon.h  RdCostARM.h
source/Lib/CommonLib/arm/neon/: AdaptiveLoopFilter_neon.cpp  Buffer_neon.cpp  InterPred_neon.cpp  InterpolationFilter_neon.cpp  LoopFilter_neon.cpp  Picture_neon.cpp  RdCost_neon.cpp  SampleAdaptiveOffset_neon.cpp  Trafo_neon.cpp  mem_neon.h  sum_neon.h  tbl_neon.h  transpose_neon.h
source/Lib/CommonLib/arm/neon_rdm/: Buffer_neon_rdm.cpp
source/Lib/CommonLib/arm/sve/: Buffer_sve.cpp  InterpolationFilter_sve.cpp  neon_sve_bridge.h  tbl_sve.h
source/Lib/CommonLib/arm/sve2/: Buffer_sve2.cpp  tbl_sve2.h
source/Lib/CommonLib/x86/: AdaptiveLoopFilterX86.h  BufferX86.h  CommonDefX86.cpp  CommonDefX86.h  FixMissingIntrin.h  InitX86.cpp  InterPredX86.h  InterpolationFilterX86.h  IntraPredX86.h  LoopFilterX86.h  PictureX86.h  QuantX86.h  RdCostX86.h  SampleAdaptiveOffsetX86.h  TrafoX86.h
source/Lib/CommonLib/x86/avx/: AdaptiveLoopFilter_avx.cpp  Buffer_avx.cpp  InterPred_avx.cpp  InterpolationFilter_avx.cpp  IntraPred_avx.cpp  LoopFilter_avx.cpp  Picture_avx.cpp  Quant_avx.cpp  RdCost_avx.cpp  Trafo_avx.cpp
source/Lib/CommonLib/x86/avx2/: AdaptiveLoopFilter_avx2.cpp  Buffer_avx2.cpp  InterPred_avx2.cpp  InterpolationFilter_avx2.cpp  IntraPred_avx2.cpp  LoopFilter_avx2.cpp  Quant_avx2.cpp  RdCost_avx2.cpp  SampleAdaptiveOffset_avx2.cpp  Trafo_avx2.cpp
source/Lib/CommonLib/x86/sse41/: AdaptiveLoopFilter_sse41.cpp  Buffer_sse41.cpp  InterPred_sse41.cpp  InterpolationFilter_sse41.cpp  IntraPred_sse41.cpp  LoopFilter_sse41.cpp  Picture_sse41.cpp  Quant_sse41.cpp  RdCost_sse41.cpp  SampleAdaptiveOffset_sse41.cpp  Trafo_sse41.cpp
source/Lib/CommonLib/x86/sse42/: AdaptiveLoopFilter_sse42.cpp  Buffer_sse42.cpp  InterpolationFilter_sse42.cpp  IntraPred_sse42.cpp  LoopFilter_sse42.cpp  Picture_sse42.cpp  Quant_sse42.cpp  RdCost_sse42.cpp  SampleAdaptiveOffset_sse42.cpp  Trafo_sse42.cpp
source/Lib/DecoderLib/: AnnexBread.cpp  AnnexBread.h  BinDecoder.cpp  BinDecoder.h  CABACReader.cpp  CABACReader.h  DecCu.cpp  DecCu.h  DecLib.cpp  DecLib.h  DecLibParser.cpp  DecLibParser.h  DecLibRecon.cpp  DecLibRecon.h  DecSlice.cpp  DecSlice.h  HLSyntaxReader.cpp  HLSyntaxReader.h  NALread.cpp  NALread.h  SEIread.cpp  SEIread.h  VLCReader.cpp  VLCReader.h
source/Lib/FilmGrain/: FilmGrain.cpp  FilmGrain.h  FilmGrainImpl.cpp  FilmGrainImpl.h  FilmGrainImplX86.h  FilmGrainImpl_X86_SIMD.h  FilmGrainImpl_avx2.cpp  FilmGrainImpl_sse41.cpp
source/Lib/Utilities/: NoMallocThreadPool.cpp  NoMallocThreadPool.h  ThreadPool.cpp  ThreadPool.h
source/Lib/libmd5/: MD5.h
source/Lib/vvdec/: CMakeLists.txt  resource.h  resource_version.h  sei.cpp  seimsg.cpp  version-rc.h.in  version.h.in  vfgs_fw.c  vfgs_fw.h  vfgs_hw.c  vfgs_hw.h  vvdec.cpp  vvdec.rc  vvdecimpl.cpp  vvdecimpl.h  wasm_bindings.cpp  wasm_bindings.h  wasm_exported_functions.json
source/VisualStudio/: common.natvis  static_vector.natvis
tests/fuzzing/: CMakeLists.txt  README_Fuzzing.md  vvdec_fuzzer.cpp
tests/vvdec_unit_test/: CMakeLists.txt  vvdec_unit_test.cpp
tests/wasm/: bitstreams.json  decoder_worker.js  run_tests.py  shell.html  shell.js  wasm_test-server.py
